# blind-charging-api

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.docs  LICENSE  README.md  alembic.ini  celeryconfig.py  cloudbuild.yaml  config.toml  conftest.py  docker-compose.yml  main.tf  pyproject.toml  run.sh
.github/workflows/: python.yml  release.yml  research.yml
alembic/: env.py
alembic/versions/: 036e6414c02c_add_extra_field_for_exposures.py  e775c3bb12d8_add_embeddings_table.py  fb649d51498d_add_gater_table.py
app/: __init__.py  func.py  logo.py
app/docs/: app.py
app/lib/: embedding.py
app/lib/backend/: rediscluster.py
app/lib/codec/: embedding.py
app/schema/: openapi.yaml
app/schema/templates/: auth.jinja2  main.jinja2  routers.jinja2
app/server/: README.md  __main__.py  app.py  bg.py  case.py  case_helper.py  config.py  db.py  db_ops.py  enumerator.py  features.py  lazy.py  log_util.py  meta.py  name.py  tasks.py  test_app.py  time.py
app/server/api/: api.yaml
app/server/api/docs/: index.html
app/server/authn/: __init__.py  base.py  client_credentials.py  headers.py  none.py  preshared.py
app/server/handlers/: experiments.py  operations.py  redaction.py  review.py
app/server/metrics/: __init__.py  azure.py  base.py  null.py
app/server/sample_data/: P441852-response-documents.ocr.txt  simple.ocr.txt  test-redacted.txt
app/server/schema/: api.yaml  docs.html  openapi.yaml
app/server/schema/docs/: index.html
app/server/schema/templates/: handlers.jinja2  routers.jinja2
app/server/store/: __init__.py  redis.py  store.py
app/server/tasks/: __init__.py  callback.py  controller.py  fetch.py  finalize.py  format.py  http.py  metrics.py  queue.py  redact.py  serializer.py
cli/: README.md  cli.py  provision.py
cmd/: README.md  __main__.py  cli.py
docs/diagrams/: RBC Private On-Prem.drawio
terraform/: .gitignore  .terraform.lock.hcl  README.md  app.tf  app_config.tf  certificate.tf  cognitive.tf  db.tf  firewall.tf  form_recognizer.tf  gateway.tf  key_vault.tf  main.tf  monitor.tf  names_vars.tf  net.md  net.tf  net_vars.tf  openai.tf  redis.tf  research_env.tf  vars.tf
terraform/backend/: cert.sh  init.sh
terraform/research/: Dockerfile  configure.sh  pyproject.toml  start.sh
tests/integration/: test_health.py  test_redact.py  testutil.py
tests/unit/: test_app.py  test_authn.py  test_callback.py  test_case.py  test_chain.py  test_enumerator.py  test_fetch.py  test_finalize.py  test_format.py  test_redact.py  test_redact_handler.py
