[project]
authors = [
    {name = "Joe Nudell", email = "jnudell@hks.harvard.edu"},
]
requires-python = "<4.0,>=3.12"
dependencies = [
    "aiohttp==3.10.5",
    "fastapi[standard]<1.0.0,>=0.115.0",
    "pyjwt<3.0.0,>=2.8.0",
    "pydantic<3.0.0,>=2.7.1",
    "sqlalchemy==2.0.35",
    "pyodbc<6.0.0,>=5.1.0",
    "aioodbc<1.0.0,>=0.5.0",
    "python-glowplug==0.3.10",
    "typer<1.0.0,>=0.12.3",
    "pydantic-settings<3.0.0,>=2.2.1",
    "uuid-utils==0.9.0",
    "greenlet==3.1.1",
    "gunicorn==23.0.0",
    "uvicorn==0.30.6",
    "jinja2<4.0.0,>=3.1.4",
    "openai<2.0.0,>=1.30.1",
    "aiosqlite<1.0.0,>=0.20.0",
    "nameparser<2.0.0,>=1.1.3",
    "redis<6.0.0,>=5.2.1",
    "azure-storage-blob<13.0.0,>=12.20.0",
    "urllib3==2.2.3",
    "pytz==2024.2",
    "flower<3.0.0,>=2.0.1",
    "argon2-cffi<24.0.0,>=23.1.0",
    "opentelemetry-sdk<2.0.0,>=1.27.0",
    "opentelemetry-api<2.0.0,>=1.27.0",
    "python-hcl2<5.0.0,>=4.3.5",
    "alembic==1.13.3",
    "fakeredis==2.24.1",
    "azure-monitor-opentelemetry<2.0.0,>=1.6.4",
    "opentelemetry-instrumentation-celery<1.0,>=0.49b1",
    "bc2 @ git+ssh://git@github.com/stanford-policylab/bc2.git",
    "certifi<2025.0.0,>=2024.12.14",
    "alligater<1.0.0,>=0.3.2",
    "kombu @ git+https://github.com/jnu/kombu.git@bb38b12eec4b79dc95caf75bf4ccdd12a78216c1",
    "celery==5.4",
]
name = "blind-charging-api"
version = "0.12.5"
description = "Race-blind Charging API"
readme = "README.md"

[dependency-groups]
dev = [
    "pytest==8.3.3",
    "pre-commit<4.0.0,>=3.7.1",
    "fakeredis<3.0.0,>=2.23.3",
    "pytest-asyncio==0.24.0",
    "celery[pytest]<6.0.0,>=5.4.0",
    "responses<1.0.0,>=0.25.3",
    "alembic<2.0.0,>=1.13.2",
    "mypy<2.0.0,>=1.11.2",
]

[tool.ruff]
exclude = ["app/server/generated", "app/logo.py"]

[tool.ruff.lint]
select = ["F", "E", "W", "I001", "C", "W", "B"]

[tool.mypy]
strict = false # TODO: Set to true when we have time to fix all the errors
ignore_missing_imports = true
exclude = "^(alembic)"

[[tool.mypy.overrides]]
module = "app.server.generated.models"
ignore_errors = true
