[project]
authors = [
    {name = "Joe Nudell", email = "jnudell@hks.harvard.edu"},
]
requires-python = "<4.0,>=3.12"
dependencies = [
    "alligater @ git+ssh://git@github.com/stanford-policylab/alligater.git",
    "bc2 @ git+ssh://git@github.com/stanford-policylab/bc2.git",
]
name = "research"
version = "0.1.0"
description = "Python research environment"
readme = "README.md"
